--- a/Guias dps/primer desafio practico/primer-desafio/src/app/taller-mecanica/taller-mecanica.component.html
+++ b/Guias dps/primer desafio practico/primer-desafio/src/app/taller-mecanica/taller-mecanica.component.html
@@ -77,6 +77,7 @@
                 <table class="table table-dark table-hover">
                     <thead>
                         <tr>
+                            <th>Id</th>
                             <th>Vehículo</th>
                             <th>Reparacion</th>
                             <th>Ticket</th>
@@ -84,9 +85,10 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let reparacion of reparacionCliente">
-                            <td scope="row">{{reparacion.vehiculo}}</td>
+                            <td scope="row">{{reparacion.idrepa}}</td>
+                            <td>{{reparacion.vehiculo}}</td>
                             <td>{{reparacion.costo}}</td>
-                            <td><button class="btn btn-secondary" (click)="ticket(cliente)" >Ver ticket</button></td>
+                            <td><button class="btn btn-secondary" (click)="ticket(reparacion)" >Ver ticket</button></td>
                         </tr>                
                     </tbody>
                 </table>
