--- a/Guias dps/teoria/proyecto011/src/app/app.component.html
+++ b/Guias dps/teoria/proyecto011/src/app/app.component.html
@@ -1,9 +1,17 @@
 <div style="text-align:center">
   <a routerLink="/juegodados">Juego de dados</a> -
   <a routerLink="/acercade">Acerca de</a> - 
-  <a routerLink="/http-articulos">http artículos</a>
+  <a routerLink="/http-articulos">Http artículos</a> -
+  <a routerLink="/cronometro">Cronometro</a>
   <div>
     <!--router-outlet inscrusta una componenete asociada a la ruta seleccionada-->
     <router-outlet></router-outlet>
   </div>
+</div>
+
+<div style="text-align:center">
+  <h1>Prueba de la componente cronometro</h1>
+  <app-cronometro inicio="15" (multiplo10)="actualizar($event)"></app-cronometro>
+  <h2>Evento</h2>
+  <h3>{{mensaje}}</h3>
 </div>
